# anunaya-rollups-sdk

./: Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: build.yml  format.yml  lint.yml  test.yml
core/: Cargo.toml
core/erasure-code/: Cargo.toml
core/erasure-code/src/: errors.rs  traits.rs
core/src/: block.rs  hasher.rs  lib.rs
core/src/traits/: block.rs  hasher.rs  mod.rs  signed_tx.rs  state_machine.rs
core/vdf/src/: lib.rs  traits.rs
core/vid/: Cargo.toml
core/vid/src/: errors.rs  lib.rs  traits.rs
erasure-code/: Cargo.toml
erasure-code/src/: erasure_code.rs  error.rs  lib.rs  traits.rs
example-rollup/: Cargo.toml
example-rollup/src/: errors.rs  main.rs  state.rs  types.rs
sequencer/: Cargo.toml
sequencer/src/: error.rs  logger.rs  main.rs  sequencer.rs  store.rs  transaction.rs
sequencer/src/routes/: info.rs  mod.rs  submit_transaction.rs
src/: lib.rs  traits.rs
vdf/: Cargo.toml
vdf/src/: errors.rs  lib.rs  traits.rs
vid/: Cargo.toml
vid/src/: error.rs
