[package]
name = "anunaya-rollups-sdk"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["sequencer"]

[workspace.dependencies]
alloy = { version = "0.15.8", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hex = "0.4.3"







