[package]
name = "anunaya-rollups-sdk"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ "core", "erasure-code", "example-rollup","sequencer", "vdf"]

[workspace.dependencies]
anunaya-rollup-core = { path = "core"}
alloy = { version = "0.15.8", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hex = "0.4.3"
axum = "0.8.4"
tower-http = "0.6.2"


ark-ff = "0.5.0"
ark-serialize = "0.5.0"
ark-std = {version = "0.5.0", default-features = false }
derivative = { version = "2.2.0", features = ["use_core"]}
ark-bls12-377 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-pallas = "0.5.0"







