[package]
name = "sequencer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
alloy = { workspace = true }
tracing-subscriber = { workspace = true, features = ["parking_lot", "env-filter"]}
tracing = { workspace = true }
hex = { workspace = true }


