[package]
name = "erasure-code"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true, features = [ "derive" ] }
ark-std = { workspace = true }
derivative = {workspace = true }
ark-bls12-377 =  {workspace = true }
ark-bls12-381 = {workspace = true }
ark-bn254 =  { workspace = true }
