[package]
name = "vid"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true, features = [ "derive" ] }
ark-std = { workspace = true }
ark-bls12-381 = {workspace = true }
ark-bn254 =  { workspace = true }
ark-ec = { workspace = true }
ark-pallas  = { workspace = true }
